Send file attachments via notifications
